# Lecture-Image-Processing

./: .clang-format  CMakeLists.txt  README.md
rsc/images/: SOURCE.md
